# llm-consortium

./: .GITIGNORE  .cursorignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IDEAS.md  LLM-DEEP-BLOOM.md  README.md  TODO.md  WORK_LOG.md  cfr-example.md  demo.py  evaluation_summary.md  monitor_issue.sh  print_json.sh  pyproject.toml  requirements.txt  run_arbiter_eval.sh  run_evaluation.sh  run_merged_arbiter_eval.sh  run_tests.sh  test_consortium_fix.py  test_direct.py  test_plan.md
.agent/: 1741638868.txt  1741638881.txt  1741638893.txt  1741638988.txt  1741639370.txt  1741639383.txt  1741639585.txt  1741639641.txt  1741639665.txt  1741639676.txt  1741639996.txt  1741640007.txt  1741640888.txt  1741640904.txt  1741640961.txt  1741640984.txt  1741640996.txt  1741641009.txt  1741641020.txt  1741643205.txt  1741809527.txt  1741809593.txt  1741809628.txt  1741809879.txt  1741810307.txt  1kITL8.tmp  2L7AYq.tmp  310NUe.tmp  36mIQr.tmp  4d8XD9.tmp  4obtWU.tmp  6ih5Iq.tmp  70huk6.tmp  7EZpC8.tmp  7oyxiq.tmp  8CFGz8.tmp  8e7DhS.tmp  92PV03.tmp  9FxNhs.tmp  9YzAbE.tmp  (+373 more)
.agent/context/: context_analysis.json  context_needs.txt
.artefacts/: .coverage  .coveragerc  .env  .flake8  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  __init__.py.bak  __init__xml.py  consortium_history.csv  example_found_bug.md  example_output.md  install_log.txt  pytest.ini  setup.cfg
examples/: README.md  consortium_diagram.md  demo.py  example.md
llm_consortium/: __init__.py  __init__.py.backup  __init__.py.bak  __init__.py.new  arbiter_prompt.xml  iteration_prompt.txt  rank_prompt.xml
llm_consortium.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_karpathy_consortium/: __init__.py
llm_karpathy_consortium.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_arbiter_parsing.py  test_cli.py  test_confidence_parsing.py  test_file_readers.py  test_llm_consortium.py  test_model_parsing.py
(+139 files in other folders)
