[project]
name = "llm-karpathy-consortium"
version = "0.1"
description = "LLM plugin implementing Andrej Karpathy's model consortium concept"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "click",
    "httpx",
    "sqlite-utils",
    "asyncio"
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-karpathy-consortium"
Changelog = "https://github.com/yourusername/llm-karpathy-consortium/releases"
Issues = "https://github.com/yourusername/llm-karpathy-consortium/issues"

[project.entry-points.llm]
karpathy_consortium = "llm_karpathy_consortium"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
packages = ["llm_karpathy_consortium"]