[project]
name = "llm-consortium"
version = "0.3"
description = "LLM plugin implementing Andrej Karpathy's model consortium tweet"
readme = "README.md"
authors = [{name = "Thomas Hughes", email = "irthomasthomas@gmail.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "click",
    "httpx",
    "sqlite-utils",
    "asyncio"
]

[project.urls]
Homepage = "https://github.com/irthomasthomas/karpathy-consortium"
Changelog = "https://github.com/irthomasthomas/karpathy-consortium/releases"
Issues = "https://github.com/irthomasthomas/karpathy-consortium/issues"

[project.entry-points.llm]
llm_consortium = "llm_consortium"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
packages = ["llm_consortium"]

[tool.setuptools.package-data]
llm_consortium = [
    "system_prompt.txt",
    "arbiter_prompt.xml",
    "iteration_prompt.txt"
]